# silent-berry2

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  checksums.txt
.github/workflows/: ci.yml
contracts/account-book/: Cargo.toml  Makefile  README.md
contracts/account-book/src/: creation.rs  main.rs  selling.rs  withdrawal.rs
contracts/buy-intent/: Cargo.toml  README.md
contracts/buy-intent/src/: main.rs
contracts/dob-selling/: Cargo.toml  README.md
contracts/dob-selling/src/: main.rs
contracts/withdrawal-intent/: Cargo.toml  README.md
contracts/withdrawal-intent/src/: main.rs
crate/spore-types/: Cargo.toml
crate/spore-types/src/: lib.rs
crate/spore-types/src/cobuild/: basic.rs  mod.rs  top_level.rs
crate/spore-types/src/spore/: action.rs  mod.rs  spore_v1.rs  spore_v2.rs
crate/types/: Cargo.toml
crate/types/schemas/: silent_berry.mol
crate/types/src/: error.rs  lib.rs  silent_berry.rs
crate/utils/: Cargo.toml
crate/utils/src/: account_book_proof.rs  hash.rs  lib.rs  udt_info.rs
docs/: account_book.md  buy_intent.md  dob_selling.md  withdrawal_intent.md
native-simulators/account-book-sim/: Cargo.toml  README.md
native-simulators/account-book-sim/src/: lib.rs
native-simulators/buy-intent-sim/: Cargo.toml  README.md
native-simulators/buy-intent-sim/src/: lib.rs
native-simulators/dob-selling-sim/: Cargo.toml  README.md
native-simulators/dob-selling-sim/src/: lib.rs
native-simulators/withdrawal-intent-sim/: Cargo.toml  README.md
native-simulators/withdrawal-intent-sim/src/: lib.rs
scripts/: find_clang  reproducible_build_docker
tests/: Cargo.toml
tests/src/: account_book.rs  build_silentberry.rs  build_tx.rs  lib.rs  tests.rs
tests/src/spore/: co_build.rs  mod.rs  spore.rs  spore_internal.rs
ts/: action.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  silent_berry.js  spore_v2.js  top_level.js  tsconfig.json
ts/account_book/: package.json  pnpm-lock.yaml  tsconfig.json
ts/account_book/src/: creation.ts  index.ts  selling.ts  utils.ts  withdrawal.ts
ts/types/: basic.js  spore_v1.js
