[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "0.14.0"
serde_json = "1.0"
lazy_static = "1.5.0"
hex = "0.4.3"

types = { path = "../crate/types" }
utils = { path = "../crate/utils", features = [ "smt", "std" ] }
spore-types = { path = "../crate/spore-types" }
