[package]
name = "account-book"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["log"] }
types = { path = "../../crate/types" }
spore-types = { path = "../../crate/spore-types" }
utils = { path = "../../crate/utils", features = [ "smt" ] }

[features]
native-simulator = ["ckb-std/native-simulator"]
