[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.3", features = ["log"] }
ckb-gen-types = { version = "0.119.0", default-features = false }
molecule = { version = "0.8.0", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
