[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.3", features = ["log"] }
blake2b-ref = "0.3.1"
sparse-merkle-tree = { version = "0.6.1", default-features = false, optional = true }
types = { path = "../types" }
spore-types = { path = "../spore-types" }

[features]
smt = [ "sparse-merkle-tree" ]
std = []