[package]
name = "withdrawal-intent-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
withdrawal-intent = { path = "../../contracts/withdrawal-intent", features = ["native-simulator"] }
ckb-std = { version = "0.16.3", features = ["native-simulator"] }

[lib]
crate-type = ["cdylib"]
